# Geode-ai-mod

./: CMakeLists.txt  mod.json
.github/workflows/: build.yml
SRC/: main.cpp
src/: main.cpp
